fix small spacing issue

--- a/src/styles/404.module.css
+++ b/src/styles/404.module.css
@@ -1,16 +1,16 @@
-.container {
+.title {
 	text-align: center;
-	margin-top: 5rem;
+	margin-top: 10rem;
 	display: flex;
 	flex-direction: column;
   align-items: center;
 }
 
-.container h1 {
+.title h1 {
 	font-size: clamp(34px, 6vw, 64px);
 }
 
-.container p {
+.title p {
 	font-size: x-large;
 }
 
