--- a/src/styles/ClubPage.module.css
+++ b/src/styles/ClubPage.module.css
@@ -1,12 +1,12 @@
-.titleContainer {
+.title {
 	text-align: center;
-	margin-top: 5rem;
+	margin-top: 10rem;
 	display: flex;
 	flex-direction: column;
   align-items: center;
 }
 
-.titleContainer h1 {
+.title h1 {
 	font-size: clamp(34px, 6vw, 64px);
 }
 
