--- a/src/styles/Clubs.module.css
+++ b/src/styles/Clubs.module.css
@@ -1,6 +1,6 @@
 .title {
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 10rem;
 }
 
 .title h1 {
