--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -7,7 +7,7 @@
 
 .title {
 	text-align: center;
-	margin-top: 5rem;
+	margin-top: 10rem;
 }
 
 .title h1 {
