--- a/src/styles/info.module.css
+++ b/src/styles/info.module.css
@@ -1,3 +1,12 @@
-.infoHeader{
-    text-align: center;
+.title {
+	text-align: center;
+	margin-top: 10rem;
+}
+
+.title h1 {
+	font-size: clamp(34px, 6vw, 64px);
+}
+
+.title p {
+	font-size: x-large;
 }
